# subvision-core

./: .gitignore  CMakeLists.txt  Makefile  README.md  cli_wrapper.cpp  emscripten_binding.cpp  main.cpp
.github/workflows/: build-subvision-core.yml
build_wasm/: index.html  subvision_core.js  subvision_wasm.js  subvision_wasm.wasm
include/: constants.h  encoding.h  image_processing.h  impact_detection.h  sheet_detection.h  subvision_cv.h  target_detection.h  types.h  utils.h
resources/: README.md
src/: encoding.cpp  image_processing.cpp  impact_detection.cpp  sheet_detection.cpp  target_detection.cpp  utils.cpp
test/: CMakeLists.txt  EllipseDetectionTest.cpp  ImpactDetectionTest.cpp
web/: index.html
